<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tela1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="28dp"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:layout_marginStart="28dp">
        </TextView>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@id/titleText"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingRight="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="28dp"
            android:textColor="#000000"
            android:textSize="26sp"
            android:lineSpacingExtra="8dp"
            android:layout_marginEnd="28dp">
        </TextView>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            app:layout_constraintTop_toBottomOf="@id/descriptionText"
            app:layout_constraintStart_toStartOf="@id/titleText"
            android:layout_marginTop="32dp"
            android:textAllCaps="true"
            android:textColor="#000000"
            app:icon="@drawable/lupa_arredondada"
            app:iconTint = "#DAA520"
            app:iconGravity = "textEnd"
            app:iconPadding = "8dp"
            app:iconSize = "24dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon">
        </Button>

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_filter"
            app:layout_constraintTop_toBottomOf="@id/descriptionText"
            app:layout_constraintStart_toEndOf="@id/searchButton"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:textAllCaps="true"
            android:textColor="#000000"
            app:icon="@drawable/seta_baixo"
            app:iconTint = "#DAA520"
            app:iconSize = "24dp"
            app:iconGravity = "textEnd"
            app:iconPadding = "8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_marginStart="16dp">
        </Button>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProdutos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchButton"
            app:layout_constraintStart_toStartOf="@id/titleText"
            app:layout_constraintEnd_toEndOf="@id/descriptionText"
            tools:listitem="@layout/layout_linha_produto">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>